# axelar-cgp-near

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: publish-rust-crate.yaml  publish-to-npm.yaml
auth/: Cargo.toml  README.md
auth/neardev/: dev-account
auth/src/: events.rs  gateway.rs  lib.rs  utils.rs
contract/: Cargo.toml  README.md  build.sh  deploy.sh
contract/auth/: Cargo.toml
contract/auth/src/: events.rs  lib.rs  utils.rs
contract/gateway/: Cargo.toml
contract/gateway/src/: events.rs  ext_traits.rs  lib.rs
contract/neardev/: dev-account  dev-account.env
contract/src/: auth_weighted.rs  events.rs  gateway.rs  lib.rs  utils.rs
contract/utils/: Cargo.toml
contract/utils/src/: lib.rs  tests.rs
executable/: Cargo.toml  README.md
executable-example/: Cargo.toml  README.md  deploy.sh
executable-example/src/: lib.rs
integration-tests/: package-lock.json  package.json
integration-tests/src/: main.ava.ts  utils.js  utils.ts
near-axelar-contract-call-example/: Cargo.toml  build.sh
near-axelar-executable/: Cargo.toml
near-axelar-executable/src/: lib.rs
