[package]
name = "executable-example"
version = "1.0.0"
authors = ["Axelar Network <eng@axelar.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp"] }
axelar-executable-near = { path = "../executable"}

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
