[package]
name = "near-axelar-executable"
version = "1.0.0"
authors = ["Axelar Network <hello@axelar.org>"]
edition = "2021"

[dependencies]
near-sdk = "4.1.1"
uint = { version = "0.9.3", default-features = false }
ethabi = { version = "18.0.0", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp"] }