[package]
name = "axelar_auth_weighted"
version = "1.0.0"
authors = ["John Doe <john@doe.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-tools = "0.7.1"
uint = { version = "0.9.3", default-features = false }
utils = { path = "../utils" }
ethabi = { git = "https://github.com/darwinia-network/ethabi", branch = "xavier-no-std", default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"