[package]
name = "axelar_gateway"
version = "1.0.0"
authors = ["John Doe <john@doe.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
utils = { path = "../utils" }
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp"] }
sha3 = { version = "0.9.1", default-features = false }
libsecp256k1 = { version = "0.3.5", default-features = false }
k256 = { version = "0.11.6", default-features = false, features = ["ecdsa", "sha256", "keccak256"] }
ethabi = { git = "https://github.com/darwinia-network/ethabi", branch = "xavier-no-std", default-features = false }