[package]
name = "axelar_gateway"
version = "1.0.0"
authors = ["John Doe <john@doe.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-tools = "0.7.2"
utils = { path = "../utils" }
ethabi = { git = "https://github.com/darwinia-network/ethabi", branch = "xavier-no-std", default-features = false }
uint = { version = "0.9.3", default-features = false }
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
getrandom = { version = "0.2", features = ["js"] }